tests/semantic_cases/invalid/writeln_with_arg.ob0
MODULE Main;
BEGIN
  WriteLn(1)
END Main.
